2010-10-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.5 release procedure:
 	Changes since nco-4_0_4: ncks chunk bug, ncra CF bug
	cd ~/nco;cvs tag -d nco-4_0_5;cvs tag -d nco-4_0_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.5 release"
	cvs tag -c nco-4_0_5;cvs tag -c nco-4_0_5-1

	* Alter builds to use Debian-supplied UDUnits2

	* Verify Debian builds netCDF4 and DAP-enabled NCO with libnetcdf6

	* Change from Debian libnetcdf4 to libnetcdf6 thanks to Maverick Meerkat

	* Fix (perhaps) HDF5_LIB_DIR handling in configure.in

	* Daily-build libnetcdf4 fixes problem writing ushort_max=65535us

2010-10-08  Charlie Zender  <zender@uci.edu>

	* Improve debugging messages in nco_lmt.c

	* Fix typos in comments

	* Improve in.cdl diagnostics for packed variables and _FillValue

2010-10-07  Charlie Zender  <zender@uci.edu>

	* Translate two-character user-input string "\0" to NUL.
	This allows ncatted and ncap2 users to insert NUL into strings
	and to NUL-initialize strings with, e.g.,
	sng_new[lat,sng_lng]="\0";

2010-10-06  Charlie Zender  <zender@uci.edu>

	* Fix bug where ncra incorrectly treats record variable as a
	fixed variable if it is specified in the "coordinates" attribute
	of any variable	in a file being processed under CCM/CCSM/CF
	metadata conventions. This bug caused core dumps. And even
	weirder behavior like creating imaginary time slices.

2010-10-05  Charlie Zender  <zender@uci.edu>

	* Fix ncks chunking bug http://nco.sf.net#bug_ncks_cnk

2010-09-29  U-neige\zender  <zender@uci.edu>

	* Add informative message when using DAP

2010-09-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.4 release procedure:
 	Changes since nco-4_0_3: chunking everywhere, ncrename bugfix, ncks -m
	cd ~/nco;cvs tag -d nco-4_0_4;cvs tag -d nco-4_0_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1

	* Use longer but more bullet-proof and less warning-prone netcdf.h
	backwards compatibility token definitions in nco_typ.h
