@@ -1,4 +1,4 @@
-# $Header: /data/zender/nco_20150216/nco/bld/Makefile,v 1.563 2010-09-24 18:44:13 zender Exp $ -*-makefile-*-
+# $Header: /data/zender/nco_20150216/nco/bld/Makefile,v 1.564 2010-10-12 23:45:45 zender Exp $ -*-makefile-*-
 
 # Purpose: GNU Makefile for NCO module nco
 # Requires GNU Make---AT&T Make chokes on GNU syntax
@@ -74,7 +74,7 @@
 # cd ~/nco/bld;ANTLR='/contrib/antlr-2.7.7/bin/antlr' ANTLR_ROOT='/contrib/antlr-2.7.7' GSL_INC='/contrib/gsl-1.12/include' GSL_LIB='/contrib/gsl-1.12/lib' NETCDF_LIB='/usr/local/lib64/r4i4' UDUNITS_INC='/contrib/udunits-1.12.9/include' UDUNITS_LIB='/contrib/udunits-1.12.9/lib' make --jobs=1 DAP_OPENDAP=N OPTS=D allinone ABI=64;cd -
 # 64-bit ABI netCDF4 on NCAR AIX systems (bluefire):
 # cd ~/nco/bld;ANTLR='/contrib/antlr-2.7.7/bin/antlr' ANTLR_ROOT='/contrib/antlr-2.7.7' CURL_LIB='/contrib/curl/lib' GSL_INC='/contrib/gsl-1.12/include' GSL_LIB='/contrib/gsl-1.12/lib' HDF5_ROOT='/contrib/hdf5-1.8.4-patch1_sequential' NETCDF_ROOT='/contrib/netcdf-4.1.1_sequential' SZ_LIB='/contrib/szip/lib' UDUNITS_INC='/contrib/udunits-1.12.9/include' UDUNITS_LIB='/contrib/udunits-1.12.9/lib' make --jobs=1 NETCDF4=Y OPTS=D SZ=Y allinone ABI=64;cd -
-# cd ~/bin/AIX;/usr/local/bin/tar cvzf ~/nco-4.0.5.aix53.tar.gz nc* ; scp ~/nco-4.0.5.aix53.tar.gz zender,nco@web.sf.net:/home/groups/n/nc/nco/htdocs/src
+# cd ~/bin/AIX;/usr/local/bin/tar cvzf ~/nco-4.0.5.aix53.tar.gz nc*;scp ~/nco-4.0.5.aix53.tar.gz zender,nco@web.sf.net:/home/groups/n/nc/nco/htdocs/src
 # Cygwin on Windows Vista systems:
 # cd ~/nco/bld;ANTLR='antlr' make --jobs=1 GSL=Y OPTS=D NETCDF4=Y UDUNITS2=Y allinone;cd -
 # cd ~/bin/WIN32;tar cvzf ~/nco-4.0.5.win32.cygwin.tar.gz nc* ; scp ~/nco-4.0.5.win32.cygwin.tar.gz zender,nco@web.sf.net:/home/groups/n/nc/nco/htdocs/src
@@ -170,7 +170,7 @@ ifndef NCO_VRS
  NCO_VRS := $(shell cat ${MY_DOC_DIR}/VERSION)
 endif
 ifndef ${NETCDF4} # netCDF4 support
- NETCDF4 := N
+ NETCDF4 := Y
 endif # endif NETCDF4
 ifndef NETCDF_ROOT
  NETCDF_ROOT := /usr/local
@@ -212,11 +212,11 @@ ifndef SZ
 endif
 ifndef UDUNITS
 # Use UDUnits functionality
- UDUNITS := Y
+ UDUNITS := N
 endif
 ifndef UDUNITS2
 # Use UDUnits2 functionality
- UDUNITS2 := N
+ UDUNITS2 := Y
 endif
 ifndef UNAMES
  UNAMES := $(shell uname -s)
